# betterpathlib

./: README.md  pyproject.toml  setup.py
.github/workflows/: python-app.yml
betterpath/: __init__.py  main.py
docs/: conf.py  index.rst
src/: __init__.py
src/betterpath/: main.py
src/betterpathlib/: __init__.py  main.py  utils.py  version.py
